fixed responsive services bug on small mobile devices

--- a/src/components/DServices/DServices.scss
+++ b/src/components/DServices/DServices.scss
@@ -95,7 +95,7 @@
     @include mixins.mobile {
       flex-direction: column;
       width: 100%;
-      display: none;
+      overflow: scroll;
     }
     .box {
       padding: 10px;
